--- a/boot/src/main/resources/application.properties
+++ b/boot/src/main/resources/application.properties
@@ -21,8 +21,8 @@ logging.file.name=ambe.log
 #java mail configuration
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
-spring.mail.username=kalawati.ambe12@gmail.com
-spring.mail.password=ambe12kalawati1998
+spring.mail.username=kalawati@gmail.com
+spring.mail.password=password1234
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 
